projects/rawkode.chat/gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rawkode-chat
  namespace: rawkode-chat
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rawkode-chat
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: xmpp-c2s
      port: 5222
      targetPort: xmpp-c2s
