projects/rawkode.chat/gitops/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rawkode-chat
  namespace: rawkode-chat
spec:
  parentRefs:
    - name: rawkode-cloud
      namespace: gateway
      sectionName: https-rawkode-chat
  hostnames:
    - rawkode.chat
  rules:
    - backendRefs:
        - name: rawkode-chat
          port: 3000
